--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,7 +15,8 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // in the individual module build.gradle files'
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
