--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-firebase/app": "^14.3.0",
+    "@react-native-firebase/app": "14.3.0",
     "@react-native-firebase/auth": "^14.3.0",
+    "@react-native-firebase/firestore": "14.3.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.6",
